# meg

./: .gitignore  .megfile  Cargo.toml  Makefile
public/: index.html
src/: console.rs  lib.rs  macros.rs  main.rs  result.rs
src/commands/: init.rs  mod.rs  trigger.rs
src/config/: mod.rs  project.rs  server.rs  task.rs  watch.rs
src/server/: http.rs  js.rs  mod.rs
src/supervisor/: mod.rs
src/supervisor/broker/: mod.rs
src/watch/: handle.rs  mod.rs  trigger.rs
