[package]
name = "meg"
version = "0.1.0"
authors = ["wess <wcope@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.2"
serde_yaml = "0.8.17"
serde_json = "1.0.64"
tokio = {version = "1.6.1", features = ["full"] }
tokio-stream = "0.1.6"
tokio-serde = {version = "0.8.0", features = ["json"]}
futures = "0.3.15"  
tide = "0.16.0" 
tide-websockets = "0.4.0"
colored = "2.0.0"
clearscreen = "1.0.4" 
glob = "0.3.0"
notify = "4.0.17"
async-recursion = "0.3.2"
uuid = {version = "0.8.2", features = ["v4"]}

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.ctrlc]
version = "3.1.9" 
features = ["termination"]
